# EntroFeed_Reader

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  cdp_debug.py  codecov.yml  docker-compose.yml  playwright.config.ts  pyproject.toml  pytest.ini  ruff.toml
.claude/plans/: sharded-chasing-snail.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: full_test.yml  publish.yml  security.yml  test.yml
configs/: digital_medical_feeds.opml  feeds.yml  handlers.yml.example  user.md.example
docs/: architecture.en.md  architecture.zh.md  docker.en.md  docker.zh.md
frontend/: .env.example  index.html  playwright.config.ts  test-page.cjs  test-page.mjs  vite.config.ts
frontend/e2e/: agent.spec.ts
frontend/src/: App.tsx  index.css  index.html  main.tsx
frontend/src/api/: entries.ts  feeds.ts  recommendations.ts  settings.ts
frontend/src/client-api/: client.ts  feeds.ts  interests.ts  llm.ts  recommendations.ts  settings.ts
frontend/src/components/: EntryCard.tsx  Layout.tsx  TopNavLayout.tsx
frontend/src/context/: ReaderContext.tsx
frontend/src/hooks/: useEntries.ts  useFeeds.ts  useRecommendations.ts  useSettings.ts  useSimilarArticles.ts  useUserProfile.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: About.tsx  Agent.tsx  ArticleReader.tsx  Dashboard.tsx  FeedEdit.tsx  FeedEntries.tsx  FeedList.tsx  HandlerConfig.tsx  Onboarding.tsx  PluginHealth.tsx  ReaderView.tsx  RecentEntries.tsx  Recommendations.tsx  Settings.tsx  index.ts
frontend/src/stores/: uiStore.ts
frontend/src/types/: index.ts
scripts/: bump_version.py  convert_svg.py  evaluate_scoring.py  png2svg.py
src/: __init__.py  app.py  backend.py  cli.py  constants.py  db.py  handlers.py  impls.py  mcp.py  metrics.py  models.py  rss.py  scheduler.py  settings.py
src/agents/: __init__.py  entrofeed_agent.py  session.py  skills_manager.py  tools.py
src/agents/skills/article_analyzer/: SKILL.md
src/agents/skills/daily_digest/: SKILL.md
src/agents/skills/mckinsey-tech-analysis/: SKILL.md
src/agents/skills/ontology-generator/: SKILL.md
src/agents/skills/ontology-init/: SKILL.md
src/content/: playwright.py  requests.py  rsshub.py
src/kernel/: __init__.py  hooks.py  registry.py
src/llm/: __init__.py  dashscope.py  dummy.py  null.py  ollama.py  openai.py
src/models/: __init__.py  feed.py  health.py
src/notification/: jira.py  matrix.py  ntfy.py  null.py  slack.py
src/ontology/: __init__.py  evaluation.py  mckinsey_plugin.py  memory.py
src/plugins/content/: __init__.py  playwright.py  requests.py  rsshub.py
src/plugins/llm/: __init__.py  baichuan.py  bytedance.py  dashscope.py  deepseek.py  dummy.py  moonshot.py  null.py  ollama.py  openai.py  tencent.py  zhipu.py
src/plugins/notification/: __init__.py  jira.py  matrix.py  ntfy.py  null.py  slack.py
src/plugins/storage/: __init__.py  handler.py  tinydb.py
src/recommender/: __init__.py  interest_based.py  similar.py  trending.py
src/services/feed/: rsshub_discovery.py  service.py
src/services/ontology/: __init__.py  domain_graph.py  domain_hierarchy.py  evaluation.py  mckinsey_plugin.py  memory.py  priority_scorer.py  registry.py  tagging.py  types.py  wikidata.py
src/services/recommendation/: __init__.py  interest_based.py  similar.py  trending.py
src/skills/: __init__.py  executor.py  loader.py  registry.py
src/skills/skills/article_analyzer/: SKILL.md
src/skills/skills/professional-recommender/: SKILL.md
src/skills/skills/rss-daily-digest/: SKILL.md
src/skills/skills/rss-hunter/: SKILL.md
src/skills/skills/translator/: SKILL.md
src/skills/skills/xiaohongshu-generator/: SKILL.md
src/static/: output.css
src/storage/: __init__.py  hybrid.py  lmdb.py  singleton.py  sqlite_storage.py  tinydb.py
tests/e2e/: api-flow.spec.ts  navigation.spec.ts
tests/integration/: test_cli_mcp.py  test_core_modules.py
tests/integration/config/: settings-playwright-dummy.yml  settings-playwright-null.yml  settings-requests-null.yml
tests/unit/: test_agents.py  test_api_endpoints.py  test_backend.py  test_content_plugins.py  test_feed_service.py  test_handlers.py  test_impls.py  test_llm_plugins.py  test_mcp.py  test_metrics.py  test_models.py  test_notification_plugins.py  test_ontology.py  test_performance.py  test_recommendation.py  test_scheduler.py  test_security.py  test_settings.py  test_skills.py
