[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "entrofeed"
version = "1.0.1"
description = "An intelligent feed reader with LLM-powered recommendations"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
keywords = ["rss", "llm", "ai", "feed-reader"]

authors = [
  {name = "EntroFeed Team", email = "wuyuezhang1984@gmail.com" }
]
maintainers = [
  {name = "EntroFeed Team", email = "wuyuezhang1984@gmail.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: News/Diary",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "feedparser",
    "aenum",
    "ruamel.yaml",
    "ruamel.yaml.string",
    "fastapi==0.110.1",
    "uvicorn[standard]",
    "tinydb",
    "fastapi-utils>=0.4.1",
    "jinja2",
    "requests",
    "readabilipy",
    "markdown2[all]",
    "simplematrixbotlib",
    "slack_sdk",
    "ollama",
    "playwright",
    "openai",
    "dashscope",
    "python-multipart",
    "typing_inspect",
    "lmdb",
    "pyopml",
    "asyncclick",
    "textstat",
    "pytest",
    "pytest_asyncio",
    "pytest-cov",
    "pytest-mock",
    # New dependencies for AgentScope and storage
    "agentscope",
    "sqlalchemy",
    "chromadb",
    # MCP server support
    "mcp>=1.0.0",
    # APScheduler for task scheduling
    "apscheduler>=3.10.0",
    # Prometheus metrics
    "prometheus-client>=0.19.0",
]

[project.urls]
"Homepage" = "https://github.com/Moon84/EntroFeed_Reader"
"Bug Reports" = "https://github.com/Moon84/EntroFeed_Reader/issues"
"Source" = "https://github.com/Moon84/EntroFeed_Reader/"
"Discussions" = "https://github.com/Moon84/EntroFeed_Reader/discussions"
"Changelog" = "https://github.com/Moon84/EntroFeed_Reader/blob/main/CHANGELOG.md"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
entrofeed = "src.cli:cli"
server = "src:run"


# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_expr = false
warn_redundant_casts = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "requests.*",
    "markdown2.*",
    "readabilipy.*",
    "feedparser.*",
    "apscheduler.*",
    "mcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.plugins.llm.*",
    "src.plugins.storage.*",
    "src.plugins.notification.*",
    "src.plugins.content.*",
    "src.kernel.registry.*",
    "src.services.feed.*",
    "src.services.ontology.domain_hierarchy.*",
    "src.services.ontology.evaluation.*",
    "src.services.ontology.tagging.*",
    "src.services.ontology.memory.*",
    "src.services.ontology.priority_scorer.*",
    "src.services.ontology.domain_graph.*",
    "src.services.ontology.registry.*",
    "src.backend.*",
    "src.services.recommendation.interest_based.*",
    "src.agents.tools.*",
    "src.agents.entrofeed_agent.*",
    "src.app.*",
    "src.storage.*",
]
ignore_errors = true
